lang.java.statics.test/tests/positive/classes/nested/innerclassref.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public class B {}
}

[B]
public class B {}

[C]
public class C {
    public void m() {
        A a = new A();
        A.B ab = a.new B(); // B resolves in the type of a
    }
}

