lang.java.statics.test/tests/negative/classes/nested/innerclassrefunbound.no.javtest
STATIX fail java.expressions.member-instance-type-ok.*Id\(\"B\"\)
JAVAC  fail cannot find symbol

[A]
public class A {
}

[B]
public class B {}

[C]
public class C {
    public void m() {
        A a = new A();
        A.B ab = a.new B(); // B resolves in the type of a
    }
}

